# ros_detectnet

./: .gitignore  CMakeLists.txt  README.md  package.xml
data/: .gitignore
include/ros_detectnet/: detector.h
src/: detectnet_node.cpp
src/ros_detectnet/: detector.cpp
